--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="th-mobile-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li class="menu-item-has-children"><a href="cources.html">Courses</a>
+                    <li class="menu-item-has-children"><a href="courses.html">Courses</a>
                         <ul class="sub-menu">
                             <li><a href="software-testing.html">Software Testing</a></li>
                             <li><a href="angular.html">Angular Development</a></li>
@@ -94,7 +94,7 @@
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
                                     <li class="menu-item-has-children">
-                                        <a href="cources.html">Courses</a>
+                                        <a href="courses.html">Courses</a>
                                         <ul class="sub-menu">
                                             <li><a href="software-testing.html">Software Testing</a></li>
                                             <li><a href="angular.html">Angular Development</a></li>
@@ -133,7 +133,7 @@
                         Institute</span>
                     <h1 class="hero-title text-xl-start text-theme text-white">Accelerate Your Career Growth & Upskill
                         Yourself!</h1>
-                    <div class="btn-group mt-35"><a href="angular.html" class="th-btn style6 style-radius">View
+                    <div class="btn-group mt-35"><a href="courses.html" class="th-btn style6 style-radius">View
                             All Courses</a></div>
                 </div>
             </div>
