--- a/java.html
+++ b/java.html
@@ -31,7 +31,7 @@
             <div class="th-mobile-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li class="menu-item-has-children"><a href="#">Courses</a>
+                    <li class="menu-item-has-children"><a href="courses.html">Courses</a>
                         <ul class="sub-menu">
                             <li><a href="software-testing.html">Software Testing</a></li>
                             <li><a href="angular.html">Angular Development</a></li>
@@ -93,7 +93,7 @@
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
                                     <li class="menu-item-has-children">
-                                        <a href="#">Courses</a>
+                                        <a href="courses.html">Courses</a>
                                         <ul class="sub-menu">
                                             <li><a href="software-testing.html">Software Testing</a></li>
                                             <li><a href="angular.html">Angular Development</a></li>
