cources page upated

--- a/courses.html
+++ b/courses.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Full Stack Development</title>
+    <title>All Courses</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -123,121 +123,6 @@
     </header>
     <!-- Header Section End -->
 
-    <section class="space" id="service-sec">
-        <div class="container">
-            <div class="row gy-4">
-                <div class="col-md-6 col-xl-4">
-                    <div class="service-card">
-                        <div class="service-card_number">01</div>
-                        <div class="shape-icon"><img src="assets/img/icon/service_card_1.svg" alt="Icon"> <span
-                                class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">Web Development</a></h3>
-                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
-                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-xl-4">
-                    <div class="service-card">
-                        <div class="service-card_number">02</div>
-                        <div class="shape-icon"><img src="assets/img/icon/service_card_2.svg" alt="Icon"> <span
-                                class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">UI/UX Design</a></h3>
-                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
-                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-xl-4">
-                    <div class="service-card">
-                        <div class="service-card_number">03</div>
-                        <div class="shape-icon"><img src="assets/img/icon/service_card_3.svg" alt="Icon"> <span
-                                class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">Digital Marketing</a></h3>
-                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
-                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-xl-4">
-                    <div class="service-card">
-                        <div class="service-card_number">04</div>
-                        <div class="shape-icon"><img src="assets/img/icon/service_card_4.svg" alt="Icon"> <span
-                                class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">Business Analysis</a></h3>
-                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
-                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-xl-4">
-                    <div class="service-card">
-                        <div class="service-card_number">05</div>
-                        <div class="shape-icon"><img src="assets/img/icon/service_card_5.svg" alt="Icon"> <span
-                                class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">Software Services</a></h3>
-                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
-                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-xl-4">
-                    <div class="service-card">
-                        <div class="service-card_number">06</div>
-                        <div class="shape-icon"><img src="assets/img/icon/service_card_6.svg" alt="Icon"> <span
-                                class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">Machine Learning</a></h3>
-                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
-                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-xl-4">
-                    <div class="service-card">
-                        <div class="service-card_number">07</div>
-                        <div class="shape-icon"><img src="assets/img/icon/service_card_7.svg" alt="Icon"> <span
-                                class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">IT Management</a></h3>
-                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
-                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-xl-4">
-                    <div class="service-card">
-                        <div class="service-card_number">08</div>
-                        <div class="shape-icon"><img src="assets/img/icon/service_card_8.svg" alt="Icon"> <span
-                                class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">Cloud Computing</a></h3>
-                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
-                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-xl-4">
-                    <div class="service-card">
-                        <div class="service-card_number">09</div>
-                        <div class="shape-icon"><img src="assets/img/icon/service_card_9.svg" alt="Icon"> <span
-                                class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">Backup &amp; Recovery</a></h3>
-                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
-                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <section class="position-relative space">
         <div class="th-bg-img background-image" style="background-image: url(&quot;assets/img/bg/cta_bg_2.jpg&quot;);">
             <img src="assets/img/bg/bg_overlay_1.png" alt="overlay">
@@ -257,7 +142,111 @@
         </div>
     </section>
 
-
+    <section class="space" id="service-sec">
+        <div class="container">
+            <div class="row gy-4">
+                <div class="col-md-6 col-xl-4">
+                    <div class="service-card">
+                        <div class="shape-icon"><img src="assets/img/icon/service_card_1.svg" alt="Icon"> <span
+                                class="dots"></span></div>
+                        <h3 class="box-title"><a href="service-details.html">Web Development</a></h3>
+                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
+                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-xl-4">
+                    <div class="service-card">
+                        <div class="shape-icon"><img src="assets/img/icon/service_card_2.svg" alt="Icon"> <span
+                                class="dots"></span></div>
+                        <h3 class="box-title"><a href="service-details.html">UI/UX Design</a></h3>
+                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
+                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-xl-4">
+                    <div class="service-card">
+                        <div class="shape-icon"><img src="assets/img/icon/service_card_3.svg" alt="Icon"> <span
+                                class="dots"></span></div>
+                        <h3 class="box-title"><a href="service-details.html">Digital Marketing</a></h3>
+                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
+                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-xl-4">
+                    <div class="service-card">
+                        <div class="shape-icon"><img src="assets/img/icon/service_card_4.svg" alt="Icon"> <span
+                                class="dots"></span></div>
+                        <h3 class="box-title"><a href="service-details.html">Business Analysis</a></h3>
+                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
+                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-xl-4">
+                    <div class="service-card">
+                        <div class="shape-icon"><img src="assets/img/icon/service_card_5.svg" alt="Icon"> <span
+                                class="dots"></span></div>
+                        <h3 class="box-title"><a href="service-details.html">Software Services</a></h3>
+                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
+                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-xl-4">
+                    <div class="service-card">
+                        <div class="shape-icon"><img src="assets/img/icon/service_card_6.svg" alt="Icon"> <span
+                                class="dots"></span></div>
+                        <h3 class="box-title"><a href="service-details.html">Machine Learning</a></h3>
+                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
+                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-xl-4">
+                    <div class="service-card">
+                        <div class="shape-icon"><img src="assets/img/icon/service_card_7.svg" alt="Icon"> <span
+                                class="dots"></span></div>
+                        <h3 class="box-title"><a href="service-details.html">IT Management</a></h3>
+                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
+                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-xl-4">
+                    <div class="service-card">
+                        <div class="shape-icon"><img src="assets/img/icon/service_card_8.svg" alt="Icon"> <span
+                                class="dots"></span></div>
+                        <h3 class="box-title"><a href="service-details.html">Cloud Computing</a></h3>
+                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
+                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-xl-4">
+                    <div class="service-card">
+                        <div class="shape-icon"><img src="assets/img/icon/service_card_9.svg" alt="Icon"> <span
+                                class="dots"></span></div>
+                        <h3 class="box-title"><a href="service-details.html">Backup &amp; Recovery</a></h3>
+                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
+                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer Section Start -->
     <footer class="footer-wrapper footer-layout3 background-image"
